syntax = "proto3";

message PGPayload {
    string action = 100;

    oneof options {
    CreateAccountAction createaccount = 200;
    ChargeAccountAction chargeaccount = 201; 
    }
}



message CreateAccountAction {
    string label = 1;
}

message ChargeAccountAction {
    string amount = 1;
}


